<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/first"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_text_address"
                android:layout_width="200dp"
                android:inputType="text"
                android:lines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/option2"/>

            <ImageButton
                android:id="@+id/image_button_find_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/address_finder_button"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="onLocationButtonClicked"
                android:contentDescription="@string/find_location"/>

        </LinearLayout>
    </FrameLayout>


<View
    android:layout_width="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="10dp"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_type"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/restaurant_type_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="3dp"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/favorite_restaurants"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/favorite_restaurant_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/broadcastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_widget_button"/>


    </LinearLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
</ScrollView>