<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <ImageView
        android:id="@+id/restaurant_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:src="@drawable/restaurant_icon"
        android:background="@drawable/background_border"
        android:contentDescription="@string/restaurant_image"
        />

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toRightOf="@+id/restaurant_icon"
        tools:text="Restaurant name"/>

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
        app:layout_constraintLeft_toRightOf="@+id/restaurant_icon"
        android:text="@string/restaurant_rating"/>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/rating_text"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true"
        />



    <ImageButton
        android:id="@+id/restaurant_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_restaurant_location"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/restaurant_favorite_button"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:background="?selectableItemBackgroundBorderless"
        android:elevation="4dp"
        android:contentDescription="@string/restaurant_location"
        />

    <ImageButton
        android:id="@+id/restaurant_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_restaurant_favorite"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?selectableItemBackgroundBorderless"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:contentDescription="@string/restaurant_rating"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_icon"
        android:foregroundGravity="bottom"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>




</android.support.constraint.ConstraintLayout>